@@ -99,3 +99,4 @@
 "Carrier name","Název přepravce"
 "Packeta Carriers","Přepravci Zásilkovny"
 "Weight","Váha"
+"Order detail","Detail objednávky"
