@@ -99,3 +99,4 @@
 "Carrier name","Carrier name"
 "Packeta Carriers","Packeta Carriers"
 "Weight","Weight"
+"Order detail","Order detail"
